--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EarthQuake-Monitor</string>
+    <string name="download_earthquakes_network_error">Fail downloading earthquakes data</string>
+    <string name="usgs_all_hour_earthquakes_url">"https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson"</string>
+    <string name="richter">Richter</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Latitude</string>
 </resources>
